# Tetris

./: .gitignore  README.md  Tetri_SFML3.0.cpp  build.bat  build.sh
distribution/TetrisGame/: README.txt
distribution/Tetris_Source/: CMakeLists.txt  README_DISTRIBUTION.txt
